chamber home page v4.2 - Fixed layout shifts

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -60,7 +60,8 @@ h1 {
 
 h2 {
     /* border: 2px solid #ccc; */
-    color: var(--highlight);
+    /* color: var(--highlight); */
+    color: white;
     font-family: var(--heading-font);
     /* margin-top: 2rem; */
     text-align: center;
@@ -302,7 +303,7 @@ hero {
     border: 1px solid #ccc;
     box-shadow: 0px 0px 2px #ccc;
     display: grid;
-    grid-column: 2;
+    /* grid-column: 2; */
     margin: 50px 0 30px;
     max-width: 100vw;
     width: 100%;
@@ -321,8 +322,8 @@ main {
     /* display: flex;
     flex-direction: column;
     flex: 1; */
-    grid-column: 2 / span 2;
-    grid-row: 1;
+    /* grid-column: 2 / span 2; */
+    /* grid-row: 1; */
     justify-content: center;
     margin: 20px;
     padding: 0;
@@ -331,9 +332,8 @@ main {
     /* width: 100%; */
 }
 
-main h1 {
-    background-color: blanchedalmond;
-}
+
+
 
 main>p {
     /* flex: 1; */
@@ -471,7 +471,7 @@ div.layout button:hover {
 }
 
 article {
-    grid-column: 1;
+    /* grid-column: 1; */
     margin: 3rem;
 }
 
@@ -572,7 +572,7 @@ aside {
     border: 1px solid var(--accent2-color);
     box-shadow: 0px 0px 2px RGBA(0, 0, 0, 0.5);
     margin: 20px;
-    grid-column: 1;
+    /* grid-column: 1; */
     /* 
     flex: 0 0 auto; */
 
