--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -103,10 +103,10 @@
     }
 
 
-    article {
+    /* article {
         grid-row: 2;
         grid-column: 1 / span 2;
-    }
+    } */
 
     /* 
     main {
@@ -131,7 +131,7 @@
         /* display: flex;
         flex-direction: column;
         flex: 1; */
-        grid-column: 1 /span 2;
+        /* grid-column: 1 /span 2; */
         justify-content: center;
         margin: 20px;
         padding: 0;
@@ -355,16 +355,10 @@
 
 
 
+    .left-sidebar {
+        display: none;
+    }
 
-    /* 
-    main {
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-        margin: 0;
-        padding: 0;
-
-    } */
 
     #menu {
 
